--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,71 @@
 	<artifactId>dbe-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-
 	<properties>
-		<project.basedir>home/novatec/workspace/mysud</project.basedir>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<!-- dependency versions -->
+		<version.webtester>2.1-SNAPSHOT</version.webtester>
+		<version.selenium>2.53.0</version.selenium>
 	</properties>
 
 	<dependencies>
+
+		<!-- Webtester -->
 		<dependency>
 			<groupId>info.novatec.testit</groupId>
-			<artifactId>livingdoc-core</artifactId>
-			<version>1.0.0</version>
-			
+			<artifactId>webtester-core</artifactId>
+			<version>${version.webtester}</version>
+		</dependency>
+		<dependency>
+			<groupId>info.novatec.testit</groupId>
+			<artifactId>webtester-support-firefox</artifactId>
+			<version>${version.webtester}</version>
+		</dependency>
+		<dependency>
+			<groupId>info.novatec.testit</groupId>
+			<artifactId>webtester-support-junit5</artifactId>
+			<version>${version.webtester}</version>
+		</dependency>
+
+		<!-- Selenium -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-support</artifactId>
+			<version>${version.selenium}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-firefox-driver</artifactId>
+			<version>${version.selenium}</version>
+		</dependency>
+
+		<!-- Testing -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.0.0-M2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.0.0-M2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-runner</artifactId>
+			<version>1.0.0-M2</version>
+		</dependency>
+
+		<!-- Logging -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.3</version>
 		</dependency>
 	</dependencies>
 
