--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <modules>
         <module>webtester2</module>
         <module>spring-wiring</module>
-        <module>spring-mvc</module>
+        <module>spring-spittr</module>
     </modules>
 
 
@@ -20,104 +20,15 @@
 
         <version.webtester>2.1-SNAPSHOT</version.webtester>
         <version.selenium>2.53.0</version.selenium>
-        <version.spring>5.0.0.M3</version.spring>
-        <version.junit>5.0.0-M3</version.junit>
-        <version.junit.platform.runner>1.0.0-M3</version.junit.platform.runner>
+        <version.spring>4.3.4.RELEASE</version.spring>
+        <version.junit>4.12</version.junit>
+        <version.lombok>1.16.12</version.lombok>
+        <version.servlet.api>3.1.0</version.servlet.api>
+        <version.servlet.jsp-api>2.3.1</version.servlet.jsp-api>
+        <version.jackson>2.8.6</version.jackson>
     </properties>
 
     <dependencies>
-
-        <!-- Web Application -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.0-b01</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
-        </dependency>
-
-        <!-- Spring -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-core</artifactId>
-            <version>${version.spring}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${version.spring}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${version.spring}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${version.spring}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${version.spring}</version>
-        </dependency>
-
-        <!-- Webtester -->
-        <dependency>
-            <groupId>info.novatec.testit</groupId>
-            <artifactId>webtester-core</artifactId>
-            <version>${version.webtester}</version>
-        </dependency>
-        <dependency>
-            <groupId>info.novatec.testit</groupId>
-            <artifactId>webtester-support-firefox</artifactId>
-            <version>${version.webtester}</version>
-        </dependency>
-        <dependency>
-            <groupId>info.novatec.testit</groupId>
-            <artifactId>webtester-support-junit5</artifactId>
-            <version>${version.webtester}</version>
-        </dependency>
-        <dependency>
-            <groupId>info.novatec.testit</groupId>
-            <artifactId>webtester-support-assertj3</artifactId>
-            <version>${version.webtester}</version>
-        </dependency>
-
-        <!-- Selenium -->
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-support</artifactId>
-            <version>${version.selenium}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-firefox-driver</artifactId>
-            <version>${version.selenium}</version>
-        </dependency>
-
-        <!-- Testing -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${version.junit}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${version.junit}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-            <version>${version.junit.platform.runner}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.mockito</groupId>
@@ -138,27 +49,29 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.3</version>
         </dependency>
+
+        <!-- Commons -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.8</version>
-            <scope>test</scope>
+            <version>${version.lombok}</version>
+            <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>1.0.0-M3</version>
-                    </dependency>
-                </dependencies>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
+
         </plugins>
     </build>
 
